# synchrony

./: Cargo.toml  README.md  justfile
autark/: Cargo.toml
autark/src/: filesystem.rs
konduttur/: Cargo.toml
konduttur/src/: filesystem.rs  main.rs
konduttur_lib/: Cargo.toml
konduttur_lib/src/: lib.rs
konduttur_lib/src/engine/: assetserver.rs  bbp.rs  command.rs  engineconfig.rs  mod.rs  state.rs  tick.rs
konduttur_lib/src/model/: asset.rs  mod.rs  project.rs
konduttur_lib/src/model/arr/: clip.rs  track.rs
konduttur_lib/src/model/flow/: mod.rs
konduttur_lib/src/model/flow/nodes/: master.rs  mod.rs  trackreader.rs
libautark/: Cargo.toml
libautark/assets/: clap.m4a  snap.m4a
libautark/src/: lib.rs
libautark/src/engine/: assetserver.rs  audiomanager.rs  bbp.rs  command.rs  constants.rs  errors.rs  mod.rs  state.rs  tick.rs  transport.rs
libautark/src/model/: mod.rs  project.rs
libautark/src/model/arr/: clip.rs  mod.rs  track.rs
libautark/src/model/flow/: graph.rs  mod.rs  socket.rs
libautark/src/model/flow/nodes/: biquad_filter.rs  duplicate.rs  eq.rs  lowpass.rs  master.rs  mod.rs  sum.rs  trackreader.rs
src/: main.rs
synchrony/: Cargo.toml
