[package]
name = "konduttur_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
arc-swap = "1.9.2"
assert_no_alloc = "1.1.2"
cpal = "0.18.1"
dyn-clone = "1.0.20"
rayon = "1.12.0"
serde = {version = "1.0.228", features = ["derive"]}
slotmap = {version = "1.1.1", features = ["serde"]}
symphonia = {version = "0.6.0", features = ["mp3"]}
thiserror = "2.0.18"

